add test coverage for GsonCodecs